force-app/main/default/objects/WorkStep/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <label>Completed At</label>
    <type>DateTime</type>
    <description>Mirrors WorkStep.Completed_At__c. Timestamp when this checklist item was marked complete. On the template this is unused at design time; the field exists so values propagate cleanly to WorkStep instances.</description>
</CustomField>