force-app/main/default/objects/WorkStep/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <label>Completed By</label>
    <type>Lookup</type>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipName>WorkStepsCompletedBy</relationshipName>
    <relationshipLabel>Work Steps Completed By</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ServiceResource who toggled the step. Lookup matches existing org schema.</description>
</CustomField>