force-app/main/default/objects/WorkStep/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Mirrors WorkStep.Sort_Order__c. Display order within the step category — orchestrator and step LWCs sort by Step_Category__c then Sort_Order__c when rendering checklists.</description>
</CustomField>